# vigil

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
.github/actions/setup-poetry-env/: action.yaml
.github/workflows/: main.yaml
tests/: helpers.py  test_dummy.py
tests/integration/: test_in_memory_track_repository.py  test_iou_tracker.py
tests/unit/: test_track_objects.py
vigil/: dummy.py
vigil/adapters/secondary/: in_memory_detection_repository.py  in_memory_track_repository.py  iou_tracker.py
vigil/business_logic/gateways/: detection_repository.py  track_repository.py  tracker.py
vigil/business_logic/models/: detection.py  track.py
vigil/business_logic/use_cases/: track_objects.py
